--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,11 @@
 name: Publish Website
 
 on:
-  # Deployment is triggered whenever a push is made to the main branch.
   push:
     branches: [main]
+  pull_request:
+    types: [ opened, synchronize, reopened, closed ]
+    branches: [ main ]
   workflow_dispatch:
 
 permissions:
@@ -11,34 +13,56 @@ permissions:
   pages: write
 
 jobs:
-  docs:
+  build:
+    name: Build (Docs)
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          submodules: true
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: lts/*
 
-      # Install dependencies
-      - name: Install Dependencies
+      - name: Restore Packages
         run: npm ci
 
-      # Run the build script
       - name: Build VuePress site
         run: npm run docs:build
 
+      - name: Upload Artifact for Website
+        uses: actions/upload-artifact@v4
+        with:
+          name: site
+          path: docs/.vuepress/dist
+
+  deploy-gh-pages:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.event_name == 'push'
+
+    environment:
+      name: github-pages
+#      url: ${{ steps.deployment.outputs.page_url }}
+
+    steps:
       - name: Setup GitHub Pages
         uses: actions/configure-pages@v5
+
+      - name: Download Artifacts for Website
+        uses: actions/download-artifact@v4
+        with:
+          name: site
+          path: ./dist
 
       - name: Upload to GitHub Pages
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs/.vuepress/dist
+          path: ./dist
 
       - name: Deploy to GitHub Pages
         id: deployment
