--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches: [main]
   pull_request:
-    types: [ opened, synchronize, reopened, closed ]
-    branches: [ main ]
+    types: [opened, synchronize, reopened, closed]
+    branches: [main]
   workflow_dispatch:
 
 permissions:
@@ -32,7 +32,7 @@ jobs:
         run: npm ci
 
       - name: Build VuePress site
-        run: npm run docs:build
+        run: npm run build
 
       - name: Upload Artifact for Website
         uses: actions/upload-artifact@v4
