--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.20",
+    "@vuepress/plugin-register-components": "^1.9.10",
     "http-server": "^14.1.1",
     "sass-embedded": "^1.85.1",
     "typescript": "^5.7.3",
@@ -25,7 +26,10 @@
     "vuepress-theme-plume": "1.0.0-rc.140"
   },
   "dependencies": {
-    "@vuepress/plugin-register-components": "^1.9.10",
-    "mermaid": "^11.5.0"
+    "@vue/component-compiler-utils": "^3.3.0",
+    "lru-cache": "^6.0.0",
+    "markdown-it-emoji": "^2.0.0",
+    "mermaid": "^11.5.0",
+    "vue-template-compiler": "^2.7.16"
   }
 }
