--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,7 +88,7 @@ jobs:
           name: site
           path: ./dist
 
-      - name: Upload
+      - name: Upload to StaticPages
         uses: SpechtLabs/StaticPages-Upload@main
         with:
           endpoint: https://staticpages.cedi.dev
