fix pages API URL

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -97,5 +97,5 @@ jobs:
       - name: Upload to Static Pages
         uses: SpechtLabs/StaticPages-Upload@main
         with:
-          endpoint: https://staticpages.cedi.dev
+          endpoint: https://pages.specht-labs.de
           site-dir: dist/
