--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "markdown-it-emoji": "^2.0.0",
     "mermaid": "^11.5.0",
     "vue-template-compiler": "^2.7.16"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.38.0"
   }
 }
