--- a/package.json
+++ b/package.json
@@ -16,23 +16,25 @@
     "vp-update": "npx vp-update"
   },
   "devDependencies": {
-    "@vuepress/bundler-vite": "2.0.0-rc.20",
-    "@vuepress/plugin-register-components": "^1.9.10",
+    "@vuepress/bundler-vite": "2.0.0-rc.23",
+    "@vuepress/plugin-register-components": "2.0.0-rc.103",
     "http-server": "^14.1.1",
-    "sass-embedded": "^1.85.1",
+    "sass-embedded": "^1.89.0",
     "typescript": "^5.7.3",
     "vue": "^3.5.13",
-    "vuepress": "2.0.0-rc.20",
-    "vuepress-theme-plume": "1.0.0-rc.140"
+    "vuepress": "2.0.0-rc.23",
+    "vuepress-theme-plume": "1.0.0-rc.152"
   },
   "dependencies": {
     "@vue/component-compiler-utils": "^3.3.0",
-    "lru-cache": "^6.0.0",
+    "@vuepress/plugin-shiki": "^2.0.0-rc.106",
+    "lru-cache": "^11.0.0",
     "markdown-it-emoji": "^2.0.0",
     "mermaid": "^11.5.0",
     "vue-template-compiler": "^2.7.16"
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "^4.38.0"
+    "@rollup/rollup-linux-x64-gnu": "^4.38.0",
+    "sass-embedded-linux-x64": "latest"
   }
 }
