--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "1.0.0",
   "description": "SpechtLabs is dedicated to building robust, scalable, and high-performance software.",
-  "author": "Cedric Kienzler <cedric@specht-labs.de>",
+  "author": "Cedric Specht <cedric@specht-labs.de>",
   "license": "Apache-2.0",
   "engines": {
     "node": "^18.20.0 || >=20.0.0"
